# AiPOiW

./: .gitignore  README.md  pyproject.toml  requirements.txt
Lab1/: Podstawy_OpenCV.ipynb
Lab2/Przyklady/: filtracja.ipynb  model_HSV.ipynb  progowanie.ipynb
Lab3/: Lab3_zadanie.ipynb.txt  demo_krawedzie.ipynb  demo_krawedzie.ipynb.txt
Lab4/: Lab4_zadanie.ipynb  Lab4_zadanie.ipynb.txt  Lab4_zadanie_1werka.ipynb  demo_SLIC.ipynb  demo_SLIC.ipynb.txt
Lab5/: Lab5_zadanie.ipynb  Lab5_zadanie.ipynb.txt  Lab5_zadanie_Hough.ipynb  Lab5_zadanie_Hough.ipynb.txt
Lab5/Lab 5 - teorio-przykłady-20221105/: demo1_morphology.ipynb  demo2_contours.ipynb  demo3_shape.ipynb  demo4_Hough.ipynb
Lab6/: Lab6.2_zadanie.ipynb
Lab6/Przyklady/: Matching_wprowadzenie.ipynb  SIFT_demo.ipynb
Lab7/: Lab7.1_zadanie.ipynb  Lab7.2_zadanie.ipynb
Lab8/: L8_zadanie.ipynb
