[tool.poetry]
name = "apow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = ">=4.0"
scikit-image = "^0.19.3"
torch = "^1.12.1"
matplotlib = "^3.6.1"
jupyter = "^1.0.0"
scikit-learn = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
