[tool.poetry]
name = "apow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = ">=4.0"
scikit-image = "^0.19.3"
matplotlib = "^3.6.1"
jupyter = "^1.0.0"
scikit-learn = "^1.2.0"
seaborn = "^0.12.2"
setuptools = "^65.6.3"
Pillow = "^9.4.0"
jupyter-core = "4.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
